<resources>
    <string name="app_name">TheDiceGame</string>
    <string name="contraseña">Password</string>
    <string name="Usuario">User</string>
    <string name="Acceso">Login</string>
    <string name="Registrar"><u>Not a member?</u></string>
    <string name="noregistrado">Access without registration</string>
    <string name="formulario">Form</string>
    <string name="email">Email</string>
    <string name="nombre_usuario">Username</string>
    <string name="bienvenido">Welcome</string>
    <string name="jugar">press the button to play</string>
    <string name="play">Play</string>
    <string name="salir">Close sesion</string>
    <string name="registrar2">Register</string>
    <string name="go">GO!</string>
    <string name="numero">Number:</string>
    <string name="lanzar">Throw dice</string>
    <string name="tirada">Rolls:</string>
    <string name="title_activity_puntuacion">Puntuacion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>