<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Formulario">

    <TextView
        android:id="@+id/textoFormulario"
        android:layout_width="194dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="99dp"
        android:fontFamily="@font/fredoka_nomral"
        android:text="@string/formulario"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoFormulario"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/textoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoFormulario"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:hint="@string/nombre_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/textoContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoFormulario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="393dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="290dp"
        android:text="@string/Registrar" />
</RelativeLayout>