<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Inicio">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="248dp"
        android:layout_height="191dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="81dp"
        app:srcCompat="@drawable/logodado" />

    <TextView
        android:id="@+id/textoBienvenida"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/fredoka_nomral"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textoJugar"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/fredoka_nomral"
        android:text="@string/jugar"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="15dp" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_below="@+id/textoJugar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_rounder"
        android:fontFamily="@font/fredoka_nomral"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jugar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="282dp"
        android:background="@drawable/button_rounder"
        android:text="@string/salir"
        android:textColor="@color/black" />
</RelativeLayout>