<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    tools:context=".Juego">

    <TableLayout
        android:id="@+id/TableTablero"
        android:layout_width="wrap_content"
        android:layout_height="342dp"
        android:layout_below="@+id/TxtPlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="142dp" />
    </TableLayout>

    <TextView
        android:id="@+id/TxtPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/fredoka_nomral"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/go"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ImgDados"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_below="@+id/TableTablero"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="130dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        app:srcCompat="@drawable/dados" />

    <TextView
        android:id="@+id/TxtNumero"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableTablero"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/numero"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_below="@+id/ImgDados"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/button_rounder"
        android:fontFamily="@font/fredoka_nomral"
        android:text="@string/lanzar" />
</RelativeLayout>